Finish implementation for integration bypass