@@ -19,6 +19,7 @@ import de.chojo.repbot.config.Configuration;
 import de.chojo.repbot.config.elements.MagicImage;
 import de.chojo.repbot.dao.access.guild.settings.Settings;
 import de.chojo.repbot.dao.access.guild.settings.sub.Reputation;
+import de.chojo.repbot.dao.access.guild.settings.sub.integrationbypass.Bypass;
 import de.chojo.repbot.dao.provider.GuildRepository;
 import de.chojo.repbot.dao.snapshots.ReputationLogEntry;
 import de.chojo.repbot.service.RoleAssigner;
@@ -42,6 +43,7 @@ import java.time.temporal.ChronoUnit;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -81,7 +83,7 @@ public class ReputationService {
      * @param context    triggered message
      * @param refMessage reference message if present
      * @param type       type of reputation source
-     * @return true if the reputation was counted and is valid
+     * @return {@link SubmitResult} indicating the success of the submission
      */
     public SubmitResult submitReputation(
             Guild guild,
@@ -93,10 +95,20 @@ public class ReputationService {
         var repGuild = guildRepository.guild(guild);
         log.trace("Submitting reputation for message {} of type {}", context.getIdLong(), type);
         if (receiver == null) return SubmitResult.of(SubmitResultType.NO_RECEIVER);
+
+
+        Optional<Bypass> optBypass = Optional.empty();
+
         // block bots
         if (receiver.getUser().isBot()) {
-            log.trace("Author of {} is bot.", context.getIdLong());
-            return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
+            boolean notEntitled = Premium.isNotEntitled(repGuild.subscriptions(), configuration.skus().features().integrationBypass().allow());
+            if (notEntitled) {
+                log.trace("Author of {} is bot.", context.getIdLong());
+                return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
+            }
+            optBypass = repGuild.settings().integrationBypass().getBypass(donor.getIdLong());
+            if (optBypass.isEmpty()) return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
+            if (!optBypass.get().isEnabled(type)) return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
         }
 
         var settings = repGuild.settings();
@@ -133,7 +145,7 @@ public class ReputationService {
             return analyzer.log(context, SubmitResult.of(SubmitResultType.SELF_VOTE));
         }
 
-        var abuseResult = assertAbuseProtection(guild, donor, receiver, context, refMessage, messageContext);
+        var abuseResult = assertAbuseProtection(guild, donor, receiver, context, refMessage, messageContext, optBypass);
         if (abuseResult.type() != SubmitResultType.SUCCESS) return abuseResult;
 
         return log(guild, donor, receiver, context, refMessage, type, settings);
@@ -142,9 +154,9 @@ public class ReputationService {
     public void deleteBulk(List<Long> messages, GuildMessageChannelUnion channel, Guild guild) {
         var reputationLog = guildRepository.guild(guild).reputation().log();
         List<ReputationLogEntry> entries = messages.stream()
-                .map(reputationLog::getLogEntries)
-                .flatMap(Collection::stream)
-                .toList();
+                                                   .map(reputationLog::getLogEntries)
+                                                   .flatMap(Collection::stream)
+                                                   .toList();
         delete(entries, channel, guild);
     }
 
@@ -159,14 +171,14 @@ public class ReputationService {
         entries.forEach(ReputationLogEntry::deleteAll);
         LocalizationContext context = localizer.context(LocaleProvider.guild(guild));
         String deleted = entries.stream()
-                .map(e -> LogFormatter.formatMessageLogEntrySimple(context, e))
-                .collect(Collectors.joining("\n"));
+                                .map(e -> LogFormatter.formatMessageLogEntrySimple(context, e))
+                                .collect(Collectors.joining("\n"));
         if (entries.size() > 1) {
             String title = localizer.localize(
                     "listener.reputation.log.bulkdelete", guild, Replacement.create("CHANNEL", channel.getAsMention()));
             deleted = title + "\n" + deleted;
         } else {
-            deleted = LogFormatter.formatMessageLogEntrySimple(context, entries.get(0)) + " **|** "
+            deleted = LogFormatter.formatMessageLogEntrySimple(context, entries.getFirst()) + " **|** "
                     + channel.getAsMention();
         }
 
@@ -239,19 +251,20 @@ public class ReputationService {
             messageContext = contextResolver.getCombinedContext(donor, context.asMessage(), settings);
         } else {
             messageContext = context.getLastMessage()
-                    .map(message -> contextResolver.getCombinedContext(message, settings))
-                    .orElseGet(() -> contextResolver.getCombinedContext(receiver));
+                                    .map(message -> contextResolver.getCombinedContext(message, settings))
+                                    .orElseGet(() -> contextResolver.getCombinedContext(receiver));
         }
         return messageContext;
     }
 
+    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
     private SubmitResult assertAbuseProtection(
             Guild guild,
             Member donor,
             Member receiver,
             ReputationContext context,
             @Nullable Message refMessage,
-            MessageContext messageContext) {
+            MessageContext messageContext, Optional<Bypass> optBypass) {
         var contextId = context.getIdLong();
         var repGuild = guildRepository.guild(guild);
         var analyzer = repGuild.reputation().analyzer();
@@ -259,7 +272,7 @@ public class ReputationService {
         var abuseSettings = settings.abuseProtection();
 
         // Abuse Protection: target context
-        if (!messageContext.members().contains(receiver) && abuseSettings.isReceiverContext()) {
+        if (!messageContext.members().contains(receiver) && abuseSettings.isReceiverContext() && !optBypass.map(Bypass::ignoreContext).orElse(false)) {
             log.trace("Receiver is not in context of {}", contextId);
             return analyzer.log(
                     context,
@@ -267,7 +280,7 @@ public class ReputationService {
         }
 
         // Abuse Protection: donor context
-        if (!messageContext.members().contains(donor) && abuseSettings.isDonorContext()) {
+        if (!messageContext.members().contains(donor) && abuseSettings.isDonorContext()&& !optBypass.map(Bypass::ignoreContext).orElse(false)) {
             log.trace("Donor is not in context of {}", contextId);
             return analyzer.log(
                     context, SubmitResult.of(SubmitResultType.DONOR_NOT_IN_CONTEXT, Replacement.createMention(donor)));
@@ -275,7 +288,7 @@ public class ReputationService {
 
         // Abuse protection: Cooldown
         var canGiveReputation = checkCooldown(context, donor, receiver, guild, settings);
-        if (canGiveReputation.type() != SubmitResultType.SUCCESS) {
+        if (canGiveReputation.type() != SubmitResultType.SUCCESS&& !optBypass.map(Bypass::ignoreCooldown).orElse(false)) {
             log.trace("Cooldown active on {}", contextId);
             return canGiveReputation;
         }
@@ -285,8 +298,8 @@ public class ReputationService {
         if (refMessage != null) {
             if (abuseSettings.isOldMessage(refMessage)
                     && !messageContext
-                            .latestMessages(abuseSettings.minMessages())
-                            .contains(refMessage)) {
+                    .latestMessages(abuseSettings.minMessages())
+                    .contains(refMessage)) {
                 log.trace("Reference message of {} is outdated", contextId);
                 return analyzer.log(context, SubmitResult.of(SubmitResultType.OUTDATED_REFERENCE_MESSAGE));
             }
@@ -304,7 +317,7 @@ public class ReputationService {
             return analyzer.log(context, SubmitResult.of(SubmitResultType.RECEIVER_LIMIT));
         }
 
-        if (abuseSettings.isDonorLimit(donor)) {
+        if (abuseSettings.isDonorLimit(donor)&& !optBypass.map(Bypass::ignoreLimit).orElse(false)) {
             log.trace("Donor limit is reached on {}", contextId);
             return analyzer.log(context, SubmitResult.of(SubmitResultType.DONOR_LIMIT));
         }
@@ -322,19 +335,19 @@ public class ReputationService {
                 lastEasterEggSent = Instant.now();
                 // TODO: Escape unknown channel 5
                 context.asMessage()
-                        .replyEmbeds(new EmbedBuilder()
-                                .setImage(magicImage.magicImageLink())
-                                .setColor(Color.RED)
-                                .build())
-                        .queue(msg -> msg.delete()
-                                .queueAfter(
-                                        magicImage.magicImageDeleteSchedule(),
-                                        TimeUnit.SECONDS,
-                                        RestAction.getDefaultSuccess(),
-                                        ErrorResponseException.ignore(
-                                                ErrorResponse.UNKNOWN_MESSAGE,
-                                                ErrorResponse.UNKNOWN_CHANNEL,
-                                                ErrorResponse.ILLEGAL_OPERATION_ARCHIVED_THREAD)));
+                       .replyEmbeds(new EmbedBuilder()
+                               .setImage(magicImage.magicImageLink())
+                               .setColor(Color.RED)
+                               .build())
+                       .queue(msg -> msg.delete()
+                                        .queueAfter(
+                                                magicImage.magicImageDeleteSchedule(),
+                                                TimeUnit.SECONDS,
+                                                RestAction.getDefaultSuccess(),
+                                                ErrorResponseException.ignore(
+                                                        ErrorResponse.UNKNOWN_MESSAGE,
+                                                        ErrorResponse.UNKNOWN_CHANNEL,
+                                                        ErrorResponse.ILLEGAL_OPERATION_ARCHIVED_THREAD)));
             }
             return true;
         }
@@ -352,12 +365,12 @@ public class ReputationService {
         var repGuild = guildRepository.guild(guild);
         // try to log a reputation
         if (!repGuild.reputation()
-                .user(receiver)
-                .addReputation(
-                        donor,
-                        context,
-                        refMessage,
-                        type)) { // submit to database failed. Maybe this message was already voted by the user.
+                     .user(receiver)
+                     .addReputation(
+                             donor,
+                             context,
+                             refMessage,
+                             type)) { // submit to database failed. Maybe this message was already voted by the user.
             log.trace(
                     "Could not log reputation for message {}. An equal entry was already present.",
                     context.getIdLong());
@@ -394,12 +407,12 @@ public class ReputationService {
             }
             if (channel == null || rank.getRole(guild).isEmpty()) return;
             channel.sendMessage(localizer.localize(
-                            "message.levelAnnouncement",
-                            guild,
-                            Replacement.createMention(receiver),
-                            Replacement.createMention(rank.role().get())))
-                    .setAllowedMentions(Collections.emptyList())
-                    .complete();
+                           "message.levelAnnouncement",
+                           guild,
+                           Replacement.createMention(receiver),
+                           Replacement.createMention(rank.role().get())))
+                   .setAllowedMentions(Collections.emptyList())
+                   .complete();
         });
         return SubmitResult.of(SubmitResultType.SUCCESS);
     }
@@ -418,7 +431,7 @@ public class ReputationService {
                 configuration.skus().features().logChannel().logChannel())) return;
 
         TextChannel textChannelById = settings.guild()
-                .getTextChannelById(settings.repGuild().settings().logChannel().channelId());
+                                              .getTextChannelById(settings.repGuild().settings().logChannel().channelId());
         if (textChannelById == null) return;
 
         textChannelById
